@@ -1,5 +1,8 @@
 2008-10-24  Gabor Csardi  <csardi@szaffi>
 
+	* interfaces/R/igraph/R/print.R (print.igraph) : quote symbolic
+	vertex names by default
+
 	* interfaces/R/igraph/R/structural.properties.R (shortest.paths)
 	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
 	make it possible to choose shortest path algorithm by hand
